--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6288227239317",
-	"ownerNumberr": "6288227239317",
-	"cr": "@MuhamadEpann",
-	"ownername": "Lord Epann",
-	"botname":"EpannBot",
+	"ownerNumber": "6285852714706",
+	"ownerNumberr": "6285852714706",
+	"cr": "@X7 BOTZ",
+	"ownername": "AfisGoodBoyy",
+	"botname":"X7 BOTZ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  EpannBot  」\nCreated By @LordEpann"
+	"fake": " 「  X7 BOTZ 」\nCreated By @AfisGoodBoyy"
 }
